--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- section for description -->
 	<div class="sample-header-section">
 
-       <h2>GITHUB</h2>
+       <h2>ROBOTICS CLUB NITP BRINGS TO YOU</h2>
        <h1> REGISTRATION FOR
         <br>
        PRESENTATHON</h1>
