--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <h2>ROBOTICS CLUB NITP BRINGS TO YOU</h2>
        <h1> REGISTRATION FOR
         <br>
-       go</h1>
+       PRESENTATHON</h1>
 
   </div>
     <!-- description section ends -->
